CVS code -
- global.c:
  shortcut_init()
	- Fix erroneous #ifdef so that nano compiles with
	  --disable-justify again. (DLR; found by Mike Frysinger)
- rcfile.c:
  parse_rcfile()
	- Have whitespace display default to off instead of on. (Mike
	  Frysinger)
- winio.c:
  get_control_kbinput()
	- Fix erroneous debugging statement so that nano compiles with
	  --enable-debug again. (Jon Oberheide)
  nanogetstr()
	- Tweak the code to update the edit window just before getting
	  statusbar input for efficiency, and update bottomwin just
	  before then too. (David Benbennick)

GNU nano 1.3.3 - 2004.06.28
- General:
	- Minor comment cleanups. (DLR)
	- Convert more ints used as boolean values to use TRUE and
	  FALSE. (David Benbennick)
	- Make sure the special control keys are handled the same way
	  after the window is resized or we come out of suspend mode.
	  Changes to do_cont() and handle_sigwinch(). (DLR)
	- Change some instances of ints that can never be negative to
	  size_t's. (DLR)
	- Add better explanations for and in the "Terminal breakage"
	  comments, and handle missing key #ifdefs inside the functions
	  that use those keys. (DLR)
	- Add restricted mode, accessible via the -Z/--restricted
	  command line option or by invoking nano with any name
	  beginning with 'r' (e.g. "rnano").  In restricted mode, nano
	  will not read or write to any file not specified on the
	  command line, read any nanorc files, allow suspending, or
	  allow a file to be appended to, prepended to, or saved under a
	  different name if it already has one. (IO ERROR)  DLR: Also
	  disable backup files and spell checking (since the latter can
	  leave a pre-spell-checked version of the file in a temporary
	  directory), use tail() to get the program name so that the
	  check for its beginning with 'r' will work when a path is
	  specified, disable toggles that are only useful with options
	  that are disabled in restricted mode, call nano_disabled_msg()